--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				<div class="row d-flex justify-content-center">
 				<div class="col-lg-8">
 				<div class="hero__text">
-				<h2>Making your life sweeter one bite at a time!</h2>
+				<h2>Hero number 1</h2>
 				<a href="#" class="primary-btn">Our cakes</a>
 				</div>
 				</div>
@@ -166,7 +166,7 @@
 				<div class="row d-flex justify-content-center">
 				<div class="col-lg-8">
 				<div class="hero__text">
-				<h2>Making your life sweeter one bite at a time!</h2>
+				<h2>Hero number 2</h2>
 				<a href="#" class="primary-btn">Our cakes</a>
 				</div>
 				</div>
