--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	<!-- Offcanvas Menu End -->
 
 	<!-- Header Section Begin -->
-	<header class="header banner">
+	<header class="header">
 		<div class="header__top">
 			<div class="container">
 				<div class="row">
@@ -119,8 +119,6 @@
 				<div class="canvas__open"><i class="fa fa-bars"></i></div>
 			</div>
 		</div>
-	</header>
-	<header class="header nav">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
