--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
 				<div class="canvas__open"><i class="fa fa-bars"></i></div>
 			</div>
 		</div>
+	</header>
+	<header class="header nav">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
