--- a/shop-details.html
+++ b/shop-details.html
@@ -177,20 +177,23 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="product__details__text">
-                        <div class="product__label">Cupcake</div>
-                        <h4>SWEET AUTUMN LEAVES</h4>
+                        <div class="product__label">Crepas y waffles</div>
+                        <h4>Waffles</h4>
                        
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida</p>
-                        <h5>Variedades</h5>
-                        <table>
-                            <tr style="height: 48px;">
-                                <td>var1: </td>
-                                <td>precio1</td>
+                        <p>Prueba nuestros waffles: crujientes por fuera, tiernos por dentro. Perfectos para 
+                            satisfacer tus antojos en cualquier momento del día. Deliciosos y versátiles, nuestros waffles son
+                             la elección ideal para un snack irresistible.</p>
+
+                        <!-- cuadro de variedades-->
+                        <h5>Ingredientes</h5>
+                        <table id="product__details__table">
+                            <tr id="product__details__td">
+                                <td>2 Ingredientes: </td>
+                                <td>$ 60</td>
                             </tr>
-                            <tr style="height: 48px;">
-                                <td>var2: </td>
-                                <td>precio2</td>
+                            <tr id="product__details__td">
+                                <td>3 Ingredientes: </td>
+                                <td>$ 75</td>
                             </tr>
                         </table>
                        
