--- a/blog.html
+++ b/blog.html
@@ -120,7 +120,7 @@
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li><a href="./index.html">Home</a></li>
-                            <li><a href="./about.html">About</a></li>
+                            <li><a href="./acerca.html">About</a></li>
                             <li><a href="./shop.html">Shop</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
