--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	<!-- Header Section Begin -->
 	<header class="header nav-bar">
 		<div class="container">
-			<div class="row">
+			<div class="row" id="header-banner">
 				
 				<div class="header__logo left">
 					<a href="./index.html"><img src="img/logo.png" alt=""></a>
