commented on section

--- a/index.html
+++ b/index.html
@@ -39,19 +39,20 @@
 		<div class="loader"></div>
 	</div>
 
+	<!-- Header Section Begin -->
 	<!-- Offcanvas Menu Begin -->
 	<div class="offcanvas-menu-overlay"></div>
 	<div class="offcanvas-menu-wrapper">
-		
+
 		<div class="offcanvas__logo">
 			<a href="./index.html"><img src="img/logo.png" alt=""></a>
 		</div>
 		<div id="mobile-menu-wrap"></div>
-		
+
 	</div>
 	<!-- Offcanvas Menu End -->
 
-	<!-- Header Section Begin -->
+	<!-- Navigation bar Begin -->
 	<header class="header nav-bar">
 		<div class="container">
 			<div class="row" id="header-banner">
@@ -71,15 +72,16 @@
 						</ul>
 					</nav>
 				</div>
-				
+	
 				<div class="burger-container">
 					<div class="canvas__open"><i class="fa fa-bars"></i></div>
 				</div>
 			</div>
 		</div>
 	</header>
+	<!-- Navigation bar End -->
 	<!-- Header Section End -->
-
+	
 	<!-- Hero Section Begin -->
 	<section class="hero">
 		<div class="hero__slider owl-carousel">
