--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
 	<!-- Map End -->
 
 	<!-- Footer Section Begin -->
-	<footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
+	<footer class="footer set-bg">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4 col-md-6 col-sm-6">
