--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	<link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
 	<link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<link rel="stylesheet" href="css/facebook.css" type="text/css">
 
 	<!-- Combo Carousel -->
 	<style>
@@ -419,13 +420,13 @@
 						</div>
 					</div>
 					</div> -->
-			<div class="map__iframe">
-				<iframe
-					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d376.98006701224836!2d-98.0978471755584!3d25.985776746032766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86656d5a30363c25%3A0x8c34e063624879ec!2sBollos%20Gourmet%20DMAM%C3%81!5e0!3m2!1sen!2smx!4v1698188235216!5m2!1sen!2smx"
-					height="350px" style="border:0;" allowfullscreen="" loading="lazy"
-					referrerpolicy="no-referrer-when-downgrade"></iframe>
+				<div class="map__iframe">
+					<iframe
+						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d376.98006701224836!2d-98.0978471755584!3d25.985776746032766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86656d5a30363c25%3A0x8c34e063624879ec!2sBollos%20Gourmet%20DMAM%C3%81!5e0!3m2!1sen!2smx!4v1698188235216!5m2!1sen!2smx"
+						height="350px" style="border:0;" allowfullscreen="" loading="lazy"
+						referrerpolicy="no-referrer-when-downgrade"></iframe>
+				</div>
 			</div>
-		</div>
 	</section>
 	<!-- Map End -->
 
@@ -475,38 +476,17 @@
 					</div>
 				</div>
 				<div class="col-lg-8">
-					<div class="row">
-						<div class="col-lg-4 col-md-4 col-sm-4 col-6">
-							<div class="instagram__pic">
-								<img src="img/instagram/instagram-1.jpg" alt="">
-							</div>
+					<!-- facebook page frame Begin -->
+					<section class="facebook-page">
+						<div class="iframe-wrap centered">
+							<iframe
+								src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2F100066507559987&width=600&colorscheme=light&show_faces=true&border_color&stream=true&header=true&height=435"
+								scrolling="yes"
+								style="border:none; overflow:hidden; width:100%; height:100%; background: #f2dfe0; float:left; "
+								allowtransparency="true" frameborder="0"></iframe>
 						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-6">
-							<div class="instagram__pic middle__pic">
-								<img src="img/instagram/instagram-2.jpg" alt="">
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-6">
-							<div class="instagram__pic">
-								<img src="img/instagram/instagram-3.jpg" alt="">
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-6">
-							<div class="instagram__pic">
-								<img src="img/instagram/instagram-4.jpg" alt="">
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-6">
-							<div class="instagram__pic middle__pic">
-								<img src="img/instagram/instagram-5.jpg" alt="">
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-6">
-							<div class="instagram__pic">
-								<img src="img/instagram/instagram-3.jpg" alt="">
-							</div>
-						</div>
-					</div>
+					</section>
+					<!-- facebook page frame End -->
 				</div>
 			</div>
 		</div>
