Changed product cards and facebook iframe

--- a/index.html
+++ b/index.html
@@ -348,51 +348,36 @@
 
 				<div class="col-lg-3 col-md-6 col-sm-6">
 					<div class="product__item">
-						<div class="product__item__pic set-bg" data-setbg="img/shop/product-1.jpg">
-							<div class="product__label">
-								<span>Cupcake</span>
-							</div>
+						<div class="wrapper-hover" style="display: flex; justify-content: center;">
+							<div class="product_item_pic set-bg hover" data-setbg="img/shop/product-1.jpg"> </div>
 						</div>
-						<div class="product__item__text">
-							<h6><a href="#">Dozen Cupcakes</a></h6>
-							<div class="product__item__price">$32.00</div>
-							<div class="cart_add">
-								<a href="#">Add to cart</a>
-							</div>
+						<div class="product_item_text">
+							<h6><a href="#">Bollos</a></h6>
+							<div class="product_item_price">$32.00</div>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-lg-3 col-md-6 col-sm-6">
 					<div class="product__item">
-						<div class="product__item__pic set-bg" data-setbg="img/shop/product-1.jpg">
-							<div class="product__label">
-								<span>Cupcake</span>
-							</div>
+						<div class="wrapper-hover" style="display: flex; justify-content: center;">
+							<div class="product_item_pic set-bg hover" data-setbg="img/shop/product-1.jpg"> </div>
 						</div>
-						<div class="product__item__text">
-							<h6><a href="#">Dozen Cupcakes</a></h6>
-							<div class="product__item__price">$32.00</div>
-							<div class="cart_add">
-								<a href="#">Add to cart</a>
-							</div>
+						<div class="product_item_text">
+							<h6><a href="#">Bollos</a></h6>
+							<div class="product_item_price">$32.00</div>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-lg-3 col-md-6 col-sm-6">
 					<div class="product__item">
-						<div class="product__item__pic set-bg" data-setbg="img/shop/product-1.jpg">
-							<div class="product__label">
-								<span>Cupcake</span>
-							</div>
+						<div class="wrapper-hover" style="display: flex; justify-content: center;">
+							<div class="product_item_pic set-bg hover" data-setbg="img/shop/product-1.jpg"> </div>
 						</div>
-						<div class="product__item__text">
-							<h6><a href="#">Dozen Cupcakes</a></h6>
-							<div class="product__item__price">$32.00</div>
-							<div class="cart_add">
-								<a href="#">Add to cart</a>
-							</div>
+						<div class="product_item_text">
+							<h6><a href="#">Bollos</a></h6>
+							<div class="product_item_price">$32.00</div>
 						</div>
 					</div>
 				</div>
@@ -430,7 +415,7 @@
 	</section>
 	<!-- Map End -->
 
-	<!-- Class Section Begin -->
+	<!-- Contacto Begin -->
 	<section class=" spad">
 		<div class="container">
 			<div class="contact__form">
@@ -459,7 +444,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- Class Section End -->
+	<!-- Contacto End -->
 
 
 	<!-- Instagram Section Begin -->
@@ -469,10 +454,12 @@
 				<div class="col-lg-4 p-0">
 					<div class="instagram__text">
 						<div class="section-title">
-							<span>Follow us on instagram</span>
-							<h2>Sweet moments are saved as memories.</h2>
+							<span>Enterate de todo</span>
+							<h2>Síguenos en Facebook</h2>
 						</div>
-						<h5><i class="fa fa-instagram"></i> @sweetcake</h5>
+						<a href="https://www.facebook.com/profile.php?id=100066507559987">
+							<h5><i class="fa fa-facebook"></i> Bollos Gourmet D' Mamá</h5>
+						</a>
 					</div>
 				</div>
 				<div class="col-lg-8">
