--- a/Products.html
+++ b/Products.html
@@ -150,7 +150,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="breadcrumb__text">
-                        <h2>Menú</h2>
+                        <h2>Bollos</h2>
                     </div>
                 </div>
             </div>
@@ -162,50 +162,81 @@
     <section class="shop spad">
         <div class="container">
             <div class="row">
+
                 <!-- category cards begin -->
+
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="product__item">
-                        <div class="wrapper-hover"> 
+                        <div class="wrapper-hover" style="display: flex; justify-content: center;"> 
                             <div class="product__item__pic set-bg hover" data-setbg="img/shop/product-1.jpg"> </div>
                         </div>
                         <div class="product__item__text">
                             <h6><a  href="#">Bollos</a></h6>
+                            <div class="product_item_price">$32.00</div>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="product__item">
-                        <div class="wrapper-hover"> 
+                        <div class="wrapper-hover" style="display: flex; justify-content: center;"> 
                             <div class="product__item__pic set-bg hover" data-setbg="img/shop/product-1.jpg"> </div>
                         </div>
                         <div class="product__item__text">
-                            <h6><a  href="#">Crepas y waffles</a></h6>
+                            <h6><a  href="#">Bollos</a></h6>
+                            <div class="product_item_price">$32.00</div>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="product__item">
-                        <div class="wrapper-hover"> 
+                        <div class="wrapper-hover" style="display: flex; justify-content: center;"> 
                             <div class="product__item__pic set-bg hover" data-setbg="img/shop/product-1.jpg"> </div>
                         </div>
                         <div class="product__item__text">
-                            <h6><a  href="#">Frappes y malteadas</a></h6>
+                            <h6><a  href="#">Bollos</a></h6>
+                            <div class="product_item_price">$32.00</div>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="product__item">
-                        <div class="wrapper-hover"> 
+                        <div class="wrapper-hover" style="display: flex; justify-content: center;"> 
                             <div class="product__item__pic set-bg hover" data-setbg="img/shop/product-1.jpg"> </div>
                         </div>
                         <div class="product__item__text">
-                            <h6><a  href="#">Otros</a></h6>
+                            <h6><a  href="#">Bollos</a></h6>
+                            <div class="product_item_price">$32.00</div>
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="product__item">
+                        <div class="wrapper-hover" style="display: flex; justify-content: center;"> 
+                            <div class="product__item__pic set-bg hover" data-setbg="img/shop/product-1.jpg"> </div>
+                        </div>
+                        <div class="product__item__text">
+                            <h6><a  href="#">Bollos</a></h6>
+                            <div class="product_item_price">$32.00</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="product__item">
+                        <div class="wrapper-hover" style="display: flex; justify-content: center;"> 
+                            <div class="product__item__pic set-bg hover" data-setbg="img/shop/product-1.jpg"> </div>
+                        </div>
+                        <div class="product__item__text">
+                            <h6><a  href="#">Bollos</a></h6>
+                            <div class="product_item_price">$32.00</div>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- category cards end -->
 
     </section>
