--- a/contact.html
+++ b/contact.html
@@ -196,48 +196,39 @@
             </div>
         </div>
             <!-- contact__address end -->
-
             </div>
         <!-- map contac End -->
-        <div class="contact__address">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="contact__text">
-                    <h3>Contact With us</h3>
-                    <ul>
-                        <li>Representatives or Advisors are available:</li>
-                        <li>Mon-Fri: 5:00am to 9:00pm</li>
-                        <li>Sat-Sun: 6:00am to 9:00pm</li>
-                    </ul>
-                    <img src="img/cake-piece.png" alt="">
-                </div>
-            </div>
-            <div class="col-lg-8">
+
+        <section class=" spad">
+            <div class="container">
                 <div class="contact__form">
-                    <form action="#">
+                    <div class="section-title">
+                        <span>¿Tienes un evento próximo o te interesa vender nuestros productos?</span>
+                        <span>También vendemos al mayoreo</span>
+                        <h2>Contáctanos</h2>
+                    </div>
+                    <form action="#" id="contact-form">
                         <div class="row">
                             <div class="col-lg-6">
-                                <input type="text" placeholder="Name">
+                                <label for="name">Nombre</label>
+                                <input type="text" placeholder="Nombre Apellido" id="name">
                             </div>
                             <div class="col-lg-6">
-                                <input type="text" placeholder="Email">
+                                <label for="email">Correo electrónico</label>
+                                <input type="email" placeholder="ejemplo@email.com" id="email">
                             </div>
                             <div class="col-lg-12">
-                                <textarea placeholder="Message"></textarea>
-                                <button type="submit" class="site-btn">Send Us</button>
+                                <label for="message">Mensaje</label>
+                                <textarea placeholder="Escribe tu mensaje aquí..." id="message"></textarea>
+                                <button type="submit" class="site-btn">Enviar</button>
                             </div>
                         </div>
                     </form>
                 </div>
             </div>
-        </div>
+        </section>
         
-            </div>
+    </div>
         </div><!--end containter-->
     </section>
     <!-- Contact Section End -->
