--- a/index.html
+++ b/index.html
@@ -153,15 +153,14 @@
 							</div>
 							<div class="combo-card-info">
 								<div class="combo-main-info">
-									<h5>COMBO 1</h5>
+									<h5>Combo clásico</h5>
 									<ul class="combo-list">
-										<li class="combo-list-item">Producto 1</li>
-										<li class="combo-list-item">Producto 2</li>
-										<li class="combo-list-item">Producto 3</li>
+										<li class="combo-list-item">1 Frappé</li>
+										<li class="combo-list-item">1 Creppa</li>
 									</ul>
 								</div>
 								<div class="combo-card-details">
-									<div class="price">00.00</div>
+									<div class="price">100</div>
 									<div>
 										<a href="combos.html" class="btn-light">Ver más <i
 												class="fa fa-chevron-right"></i></a>
@@ -171,19 +170,18 @@
 						</div>
 						<div class="combo-card drop-shadow">
 							<div class="combo-img light-on-hover">
-								<img src="img/combo/combo-1.jpg" alt=""></img>
+								<img src="img/combo/combo-2.jpg" alt=""></img>
 							</div>
 							<div class="combo-card-info">
 								<div class="combo-main-info">
-									<h5>COMBO 2</h5>
+									<h5>Combo waffle</h5>
 									<ul class="combo-list">
-										<li class="combo-list-item">Producto 1</li>
-										<li class="combo-list-item">Producto 2</li>
-										<li class="combo-list-item">Producto 3</li>
+										<li class="combo-list-item">1 Frappé</li>
+										<li class="combo-list-item">1 Waffle</li>
 									</ul>
 								</div>
 								<div class="combo-card-details">
-									<div class="price">00.00</div>
+									<div class="price">120</div>
 									<div>
 										<a href="combos.html" class="btn-light">Ver más <i
 												class="fa fa-chevron-right"></i></a>
@@ -193,19 +191,18 @@
 						</div>
 						<div class="combo-card drop-shadow">
 							<div class="combo-img light-on-hover">
-								<img src="img/combo/combo-1.jpg" alt=""></img>
+								<img src="img/combo/combo-3.jpg" alt=""></img>
 							</div>
 							<div class="combo-card-info">
 								<div class="combo-main-info">
-									<h5>COMBO 3</h5>
+									<h5>Combo banana split</h5>
 									<ul class="combo-list">
-										<li class="combo-list-item">Producto 1</li>
-										<li class="combo-list-item">Producto 2</li>
-										<li class="combo-list-item">Producto 3</li>
+										<li class="combo-list-item">1 Frappé</li>
+										<li class="combo-list-item">1 Banana split</li>
 									</ul>
 								</div>
 								<div class="combo-card-details">
-									<div class="price">00.00</div>
+									<div class="price">110</div>
 									<div>
 										<a href="combos.html" class="btn-light">Ver más <i
 												class="fa fa-chevron-right"></i></a>
@@ -215,85 +212,18 @@
 						</div>
 						<div class="combo-card drop-shadow">
 							<div class="combo-img light-on-hover">
-								<img src="img/combo/combo-1.jpg" alt=""></img>
+								<img src="img/combo/combo-4.png" alt=""></img>
 							</div>
 							<div class="combo-card-info">
 								<div class="combo-main-info">
-									<h5>COMBO 4</h5>
+									<h5>Para compartir</h5>
 									<ul class="combo-list">
-										<li class="combo-list-item">Producto 1</li>
-										<li class="combo-list-item">Producto 2</li>
-										<li class="combo-list-item">Producto 3</li>
+										<li class="combo-list-item">2 Frappés</li>
+										<li class="combo-list-item">1 Nachos</li>
 									</ul>
 								</div>
 								<div class="combo-card-details">
-									<div class="price">00.00</div>
-									<div>
-										<a href="combos.html" class="btn-light">Ver más <i
-												class="fa fa-chevron-right"></i></a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="combo-card drop-shadow">
-							<div class="combo-img light-on-hover">
-								<img src="img/combo/combo-1.jpg" alt=""></img>
-							</div>
-							<div class="combo-card-info">
-								<div class="combo-main-info">
-									<h5>COMBO 5</h5>
-									<ul class="combo-list">
-										<li class="combo-list-item">Producto 1</li>
-										<li class="combo-list-item">Producto 2</li>
-										<li class="combo-list-item">Producto 3</li>
-									</ul>
-								</div>
-								<div class="combo-card-details">
-									<div class="price">00.00</div>
-									<div>
-										<a href="combos.html" class="btn-light">Ver más <i
-												class="fa fa-chevron-right"></i></a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="combo-card drop-shadow">
-							<div class="combo-img light-on-hover">
-								<img src="img/combo/combo-1.jpg" alt=""></img>
-							</div>
-							<div class="combo-card-info">
-								<div class="combo-main-info">
-									<h5>COMBO 6</h5>
-									<ul class="combo-list">
-										<li class="combo-list-item">Producto 1</li>
-										<li class="combo-list-item">Producto 2</li>
-										<li class="combo-list-item">Producto 3</li>
-									</ul>
-								</div>
-								<div class="combo-card-details">
-									<div class="price">00.00</div>
-									<div>
-										<a href="combos.html" class="btn-light">Ver más <i
-												class="fa fa-chevron-right"></i></a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="combo-card drop-shadow">
-							<div class="combo-img light-on-hover">
-								<img src="img/combo/combo-1.jpg" alt=""></img>
-							</div>
-							<div class="combo-card-info">
-								<div class="combo-main-info">
-									<h5>COMBO 7</h5>
-									<ul class="combo-list">
-										<li class="combo-list-item">Producto 1</li>
-										<li class="combo-list-item">Producto 2</li>
-										<li class="combo-list-item">Producto 3</li>
-									</ul>
-								</div>
-								<div class="combo-card-details">
-									<div class="price">00.00</div>
+									<div class="price">130</div>
 									<div>
 										<a href="combos.html" class="btn-light">Ver más <i
 												class="fa fa-chevron-right"></i></a>
@@ -302,29 +232,29 @@
 							</div>
 						</div>
 					</div>
+
 					<script>
 						$(function () {
 							// Owl Carousel
 							var owl = $(".owl-carousel");
 							owl.owlCarousel({
 								items: 3.5,
-								margin: 2,
+								margin: 0,
 								loop: true,
 								nav: true,
 								dots: true,
 								autoplay: true,
 								autoplayTimeout: 2500,
-								stagePadding: 50,
 								navText: [
 									"<i class='fa fa-caret-left'></i>",
 									"<i class='fa fa-caret-right'></i>"
 								],
 								autoHeight: true,
 								responsive: {
-									0: { items: 1 },
-									768: { items: 2 },
-									1024: { items: 3 },
-									1200: { items: 3.5 }
+									0: { items: 1, center: true },
+									768: { items: 2, center: false },
+									1024: { items: 3, center: true },
+									1200: { items: 3.5, center: true }
 								}
 							});
 						});
@@ -424,7 +354,7 @@
 					<span>También vendemos al mayoreo</span>
 					<h2>Contáctanos</h2>
 				</div>
-				<form action="#" id="contact-form">
+				<form action="#" id="contact-form" class="contact__form">
 					<div class="row">
 						<div class="col-lg-6">
 							<label for="name">Nombre</label>
@@ -454,7 +384,7 @@
 				<div class="col-lg-4 p-0">
 					<div class="instagram__text">
 						<div class="section-title">
-							<span>Enterate de todo</span>
+							<span>Entérate de todo</span>
 							<h2>Síguenos en Facebook</h2>
 						</div>
 						<a href="https://www.facebook.com/profile.php?id=100066507559987">
@@ -464,12 +394,11 @@
 				</div>
 				<div class="col-lg-8">
 					<!-- facebook page frame Begin -->
-					<section class="facebook-page">
-						<div class="iframe-wrap centered">
+					<section class="facebook-page row">
+						<div class="iframe-wrap">
 							<iframe
 								src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2F100066507559987&width=600&colorscheme=light&show_faces=true&border_color&stream=true&header=true&height=435"
-								scrolling="yes"
-								style="border:none; overflow:hidden; width:100%; height:100%; background: #f2dfe0; float:left; "
+								scrolling="yes" style="border:none; overflow:hidden; background: #f2dfe0;"
 								allowtransparency="true" frameborder="0"></iframe>
 						</div>
 					</section>
@@ -512,7 +441,7 @@
 						<h6>Contáctanos</h6>
 						<ul>
 							<li><i class="fa fa-phone"></i>899 542 4832</li>
-							<li><i class="fa fa-envelope"></i>bollosgourmet.dmama@gmail.com</li>
+							<!-- <li><i class="fa fa-envelope"></i>bollosgourmet.dmama@gmail.com</li> -->
 							<li><a href="contact.html">Ver más</a></li>
 						</ul>
 					</div>
