Added price class to items and fixed typo

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 									<h5>Combo clásico</h5>
 									<ul class="combo-list">
 										<li class="combo-list-item">1 Frappé</li>
-										<li class="combo-list-item">1 Creppa</li>
+										<li class="combo-list-item">1 Crepa</li>
 									</ul>
 								</div>
 								<div class="combo-card-details">
@@ -283,8 +283,8 @@
 							<div class="product_item_pic set-bg hover" data-setbg="img/shop/product-1.jpg"> </div>
 						</div>
 						<div class="product_item_text">
-							<h6><a href="#">Bollos</a></h6>
-							<div class="product_item_price">$32.00</div>
+							<h6><a href="#">Crepas</a></h6>
+							<div class="product_item_price"><span class="price">60</span></div>
 						</div>
 					</div>
 				</div>
@@ -295,8 +295,8 @@
 							<div class="product_item_pic set-bg hover" data-setbg="img/shop/product-1.jpg"> </div>
 						</div>
 						<div class="product_item_text">
-							<h6><a href="#">Bollos</a></h6>
-							<div class="product_item_price">$32.00</div>
+							<h6><a href="#">Donas</a></h6>
+							<div class="product_item_price"><span class="price">20</span></div>
 						</div>
 					</div>
 				</div>
@@ -307,8 +307,8 @@
 							<div class="product_item_pic set-bg hover" data-setbg="img/shop/product-1.jpg"> </div>
 						</div>
 						<div class="product_item_text">
-							<h6><a href="#">Bollos</a></h6>
-							<div class="product_item_price">$32.00</div>
+							<h6><a href="#">Waffles</a></h6>
+							<div class="product_item_price"><span class="price">50</span></div>
 						</div>
 					</div>
 				</div>
