Fixed contact open div

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							<li class="active"><a href="./index.html">Inicio</a></li>
 							<li><a href="./shop.html">Menú</a></li>
 							<li><a href="./blog.html">Combos</a></li>
-							<li><a href="./contact.html">Contacto</a></li>
+							<li><a href="contact.html">Contacto</a></li>
 							<li><a href="./acerca.html">Acerca de</a></li>
 						</ul>
 					</nav>
