Fixed map on index

--- a/index.html
+++ b/index.html
@@ -328,18 +328,10 @@
 			</div>
 
 			<div class="map">
-				<!-- <div class="row">
-					<div class="col-lg-4 col-md-7">
-						<div class="map__inner">
-							<h6>Bollos Gourmet D' Mamá</h6>
-							<p>Calle Héroe de Nacozari sin número col. Río Bravo 3, Río Bravo, Tamaulipas</p>
-						</div>
-					</div>
-					</div> -->
-				<div class="map__iframe">
+				<div class="map__iframe" style="width: 100%;">
 					<iframe
 						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d376.98006701224836!2d-98.0978471755584!3d25.985776746032766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86656d5a30363c25%3A0x8c34e063624879ec!2sBollos%20Gourmet%20DMAM%C3%81!5e0!3m2!1sen!2smx!4v1698188235216!5m2!1sen!2smx"
-						height="350px" style="border:0;" allowfullscreen="" loading="lazy"
+						height="350px" width="100%" style="border:0;" allowfullscreen="" loading="lazy"
 						referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>
 			</div>
