Products, Combos & Categories V1.1
sis

--- a/Products.html
+++ b/Products.html
@@ -166,73 +166,73 @@
                 <!-- category cards begin -->
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="product__item">
+                    <div class="product__item products-gap">
                         <div class="wrapper-hover" style="display: flex; justify-content: center;"> 
-                            <div class="product__item__pic set-bg hover" data-setbg="img/shop/product-1.jpg"> </div>
+                            <div class="set-bg hover product_width"> <img class="product__item__pic" src="img/products/bollo bubulubu.jpg" alt=""> </div>
                         </div>
                         <div class="product__item__text">
-                            <h6><a  href="#">Bollos</a></h6>
-                            <div class="product_item_price">$32.00</div>
+                            <h6><a  href="#">Bollo bubulubu</a></h6>
+                            <div class="product_item_price"><span class="price">20</span></div>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="product__item">
+                    <div class="product__item products-gap">
                         <div class="wrapper-hover" style="display: flex; justify-content: center;"> 
-                            <div class="product__item__pic set-bg hover" data-setbg="img/shop/product-1.jpg"> </div>
+                            <div class="set-bg hover product_width"> <img class="product__item__pic" src="img/products/bollo cheesecake de fresa.jpg" alt=""> </div>
                         </div>
                         <div class="product__item__text">
-                            <h6><a  href="#">Bollos</a></h6>
-                            <div class="product_item_price">$32.00</div>
+                            <h6><a  href="#">Bollo cheesecake de fresa</a></h6>
+                            <div class="product_item_price"><span class="price">20</span></div>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="product__item">
+                    <div class="product__item products-gap">
                         <div class="wrapper-hover" style="display: flex; justify-content: center;"> 
-                            <div class="product__item__pic set-bg hover" data-setbg="img/shop/product-1.jpg"> </div>
+                            <div class="set-bg hover product_width"> <img class="product__item__pic" src="img/products/bollo mazapan.jpg" alt=""> </div>
                         </div>
                         <div class="product__item__text">
-                            <h6><a  href="#">Bollos</a></h6>
-                            <div class="product_item_price">$32.00</div>
+                            <h6><a  href="#">Bollo mazapan</a></h6>
+                            <div class="product_item_price"><span class="price">20</span></div>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="product__item">
+                    <div class="product__item products-gap">
                         <div class="wrapper-hover" style="display: flex; justify-content: center;"> 
-                            <div class="product__item__pic set-bg hover" data-setbg="img/shop/product-1.jpg"> </div>
+                            <div class="set-bg hover product_width"> <img class="product__item__pic" src="img/products/bollo moka oreo.jpg" alt=""> </div>
                         </div>
                         <div class="product__item__text">
-                            <h6><a  href="#">Bollos</a></h6>
-                            <div class="product_item_price">$32.00</div>
+                            <h6><a  href="#">Bollo moka oreo</a></h6>
+                            <div class="product_item_price"><span class="price">20</span></div>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="product__item">
+                    <div class="product__item products-gap">
                         <div class="wrapper-hover" style="display: flex; justify-content: center;"> 
-                            <div class="product__item__pic set-bg hover" data-setbg="img/shop/product-1.jpg"> </div>
+                            <div class="set-bg hover product_width"> <img class="product__item__pic" src="img/products/bollo pica fresa.jpg" alt=""> </div>
                         </div>
                         <div class="product__item__text">
-                            <h6><a  href="#">Bollos</a></h6>
-                            <div class="product_item_price">$32.00</div>
+                            <h6><a  href="#">Bollo pica fresa</a></h6>
+                            <div class="product_item_price"><span class="price">20</span></div>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="product__item">
+                    <div class="product__item products-gap">
                         <div class="wrapper-hover" style="display: flex; justify-content: center;"> 
-                            <div class="product__item__pic set-bg hover" data-setbg="img/shop/product-1.jpg"> </div>
+                            <div class="set-bg hover product_width"> <img class="product__item__pic" src="img/products/bollo piña colada.jpg" alt=""> </div>
                         </div>
                         <div class="product__item__text">
-                            <h6><a  href="#">Bollos</a></h6>
-                            <div class="product_item_price">$32.00</div>
+                            <h6><a  href="#">Bollo piña colada</a></h6>
+                            <div class="product_item_price"><span class="price">20</span></div>
                         </div>
                     </div>
                 </div>
